package design.visitor;

public abstract class Person {
    public abstract void accept(Action action);
}
