package design.visitor;

public class Woman extends Person {

    @Override
    public void accept(Action action) {
        // TODO Auto-generated method stub
        action.getWomanResult(this);
    }
    
}
